# agent-publish

./: .gitignore  CONTRIBUTING.md  KANBAN.md  LICENSE  README.md  SUBMISSIONS.md  assign_5_tasks.sh  assign_5_tasks_v2.sh  pyproject.toml
.commandcode/taste/: taste.md
.github/: cron-runner.py
.github/workflows/: ci.yml  release.yml
examples/: agent-publish.toml  agent-publish.yaml  claude_post_hook.py  cron_overnight.py  sample-report.md
examples/html/: changelog-brutalist.html  changelog-default.html  changelog-minimal.html  changelog.md  code-walkthrough-brutalist.html  code-walkthrough-default.html  code-walkthrough-minimal.html  code-walkthrough.md  daily-briefing-brutalist.html  daily-briefing-default.html  daily-briefing-minimal.html  daily-briefing.md  meeting-notes-brutalist.html  meeting-notes-default.html  meeting-notes-minimal.html  meeting-notes.md  research-report-brutalist.html  research-report-default.html  research-report-minimal.html  research-report.md  sample-report-brutalist.html  sample-report-default.html  sample-report-minimal.html
progress/: AP-001.md  AP-002.md  AP-011.md  AP-012.md  AP-030.md  AP-032.md  AP-037.md  AP-038.md  AP-039.md
sketch/: 2026-06-04-template-flag.html  2026-06-05-template-flag.html  2026-06-05-weekly-research-report.html  2026-06-06-template-flag.html  2026-06-07-autonomous-ai-agents-a-survey-of-2025-2026-products.html  2026-06-07-changelog.html  2026-06-07-daily-briefing-6-june-2026.html  2026-06-07-how-fingerprint-caching-works.html  2026-06-07-standup-notes-5-june-2026.html  2026-06-07-template-flag.html  2026-06-07-weekly-research-report.html  2026-06-08-template-flag.html  2026-06-09-template-flag.html  2026-06-28-template-flag.html  2026-06-29-weekly-research-report.html
src/agent_publish/: __init__.py  assets.py  cli.py  config.py  converter.py  designmd.py  exporters.py  feed.py  footnotes.py  humanize.py  image_optimizer.py  index.py  linter.py  oklch.py  preview.py  publisher.py  schema.py  skills_loader.py  smart_typography.py  state.py  tags.py  themes.py  tldr.py  validator.py  watch.py
src/agent_publish/design_themes/brutalist/: DESIGN.md  base.css
src/agent_publish/design_themes/default/: DESIGN.md  base.css
src/agent_publish/design_themes/editorial/: DESIGN.md  base.css
tests/: test_agent_publish.py  test_antislp.py  test_designmd.py  test_humanize.py  test_new_features.py  test_oklch.py  test_preview.py  test_skills.py  test_tags.py  test_tldr.py
(+10 files in other folders)
