[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentpub"
version = "0.1.0"
description = "Markdown-to-HTML pipeline for AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Markup",
]
dependencies = [
    "markdown>=3.5",
    "pygments>=2.15",
    "toml>=0.10.2",
    "rich>=13.0",
    "pyyaml>=6.0",
    "watchdog>=3.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "black", "ruff"]

[project.scripts]
agent-publish = "agent_publish.cli:main"

[project.urls]
Homepage = "https://github.com/thisisprabha/agent-publish"
Repository = "https://github.com/thisisprabha/agent-publish"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_publish"]

[tool.black]
line-length = 88

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501"]
